text align fixed

--- a/public/stylesheets/screen.sass
+++ b/public/stylesheets/screen.sass
@@ -31,8 +31,6 @@ $lighter_orange: #FF9A8C
   MozOpacity: 0.70
   opacity: 0.70
 
-body
-  text-align: center
 
 #background
   position:absolute
@@ -43,7 +41,6 @@ article
   @include wrapper
   font-size: 1em
   font-family: Helvetica, sans-serif
-  text-align: center
   margin: 12% auto
 
   .input_text
